# daft

./: .gitignore  Cargo.toml  README.md
configs/: server_one.json  server_three.json  server_two.json
proto/: raft.proto
src/: node.rs  server.rs
src/node/: config.rs  daft_server.rs  membership.rs  peer.rs  peer_client.rs  peer_server.rs
